--- a/index.css
+++ b/index.css
@@ -50,6 +50,57 @@ a.active,a:hover{
     transition: .5s;
 }
 
+.checkbtn{
+    float: right;
+    cursor: pointer;
+    display: none;
+}
+
+#check{
+    display: none;
+}
+
+@media (max-width: 952px){
+    label.name{
+        font-size: 30px;
+        padding-left: 50px;
+    }
+    nav ul li a{
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 858px){
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #2c3e50;
+        top: 80px;
+        left: -100;
+        text-align: center;
+        transition: all .5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    nav ul li a{
+        font-size: 20px;
+    }
+    a:hover, a.active{
+        background: none;
+        color:#0082e6;
+    }
+    #check:checked ~ ul{
+        left: 0px;
+    }
+}
+
 main{
     text-align: center;
 }
@@ -81,7 +132,7 @@ div {
     text-align: center;
     left: auto;
     right: auto;
-    padding-top: 50px;
+    padding-top: 40px;
 }
 
 a.hyperlink{
