--- a/aboutMe.css
+++ b/aboutMe.css
@@ -49,6 +49,63 @@ a.active,a:hover{
     transition: .5s;
 }
 
+.checkbtn{
+    float: right;
+    cursor: pointer;
+    display: none;
+}
+
+#check{
+    display: none;
+}
+
+@media (max-width: 952px){
+    label.name{
+        font-size: 30px;
+        padding-left: 50px;
+    }
+    nav ul li a{
+        font-size: 16px;
+    }
+    .last-name{
+        display: none;
+    }
+}
+
+@media (max-width: 858px){
+    .checkbtn{
+        display: block;
+        position: absolute;
+        right: 0px;
+        cursor: pointer;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #2c3e50;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: .3s;
+    }
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    nav ul li a{
+        font-size: 20px;
+    }
+    a:hover, a.active{
+        background: none;
+        color:#0082e6;
+    }
+    #check:checked ~ ul{
+        left: 0;
+    }
+}
+
 main{
     text-align: center;
 }
