--- a/aboutMe.css
+++ b/aboutMe.css
@@ -2,22 +2,24 @@
     padding: 0;
     margin: 0;
     text-decoration: none;
+    list-style: none;
     box-sizing: border-box;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(213, 213, 213);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background: rgb(24, 29, 34);
+    color:antiquewhite;
 }
 
 nav {
-    background: rgb(15, 123, 255);
+    background: #010409;
     height: 80px;
     width: 100%;
 }
 
 label {
-    color: white;
+    color:antiquewhite;
     font-size: 35px;
     line-height: 80px;
     padding: 0 100px;
@@ -36,7 +38,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: white;
+    color:antiquewhite;
     font-size: 17px;
     text-transform: uppercase;
     padding: 7px 13px;
@@ -83,7 +85,7 @@ a.active,a:hover{
         position: fixed;
         width: 100%;
         height: 100vh;
-        background: #2c3e50;
+        background: rgb(24, 29, 34);
         top: 80px;
         left: -100%;
         text-align: center;
@@ -118,7 +120,7 @@ nav ul li a::before {
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: white;
+    background-color: antiquewhite;
     transform: scaleX(0);
     transform-origin: bottom;
     transition: transform 0.3s ease;
