--- a/index.css
+++ b/index.css
@@ -7,18 +7,19 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(213, 213, 213);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background: rgb(24, 29, 34);
+    color:antiquewhite;
 }
 
 nav {
-    background: rgb(15, 123, 255);
+    background: #010409;
     height: 80px;
     width: 100%;
 }
 
 label {
-    color: white;
+    color:antiquewhite;
     font-size: 35px;
     line-height: 80px;
     padding: 0 100px;
@@ -37,7 +38,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: white;
+    color:antiquewhite;
     font-size: 17px;
     text-transform: uppercase;
     padding: 7px 13px;
@@ -84,7 +85,7 @@ a.active,a:hover{
         position: fixed;
         width: 100%;
         height: 100vh;
-        background: #2c3e50;
+        background: rgb(24, 29, 34);
         top: 80px;
         left: -100%;
         text-align: center;
@@ -119,7 +120,7 @@ nav ul li a::before {
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: white;
+    background-color: antiquewhite;
     transform: scaleX(0);
     transform-origin: bottom;
     transition: transform 0.3s ease;
@@ -132,7 +133,9 @@ nav ul li a:hover::before {
 img {
     border-radius: 10px;
     height: 400px;
+    box-shadow: 0 0 50px rgba(211, 197, 255, 0.37); /* Adjust the color and size as needed */
 }
+
 
 div {
     text-align: center;
@@ -143,7 +146,7 @@ div {
 
 a.hyperlink{
     font-size: 1.5em;
-    color:#000000;
+    color:antiquewhite;
     text-decoration: none;
     text-align: center;
     display: block;
@@ -166,8 +169,8 @@ a.hyperlink:hover, a.hyperlink:active{
 .right-button {
     padding: 10px 20px;
     font-size: large;
-    background-color: rgb(15, 123, 255);;
-    color: white;
+    background-color: hsl(0, 0%, 25%);
+    color: antiquewhite;
     border: none;
     cursor: pointer;
     border-radius: 3px
