--- a/projects.css
+++ b/projects.css
@@ -6,48 +6,31 @@
     box-sizing: border-box;
 }
 
-/* Add animation to "page content" */
-.animate-left {
-    position: relative;
-    -webkit-animation-name: animateleft;
-    -webkit-animation-duration: 1s;
-    animation-name: animateleft;
-    animation-duration: 1s;
-    z-index: -5;
-}
-  
-@-webkit-keyframes animateleft {
-    from { left:-100px; opacity:0 } 
-    to { left:0px; opacity:1 }
-}
-  
-@keyframes animateleft { 
-    from{ left:-100px; opacity:0 } 
-    to{ left:0; opacity:1 }
-}
-
+/* Bounce for Li*/
 .animated { 
     background-repeat: no-repeat;
     -webkit-animation-duration: 1s;
     animation-duration: 1s; 
     -webkit-animation-fill-mode: both; 
     animation-fill-mode: both; 
-}
-
-@-webkit-keyframes bounce { 
+ }
+ 
+ @-webkit-keyframes bounce { 
     0%, 20% {-webkit-transform: translateY(0);} 
     10% {-webkit-transform: translateY(-7px);} 
-} 
+ } 
 
-@keyframes bounce { 
+ @keyframes bounce { 
     0%, 20%{transform: translateY(0);} 
     10% {transform: translateY(-7px);} 
-}
+ }
 
-.bounce { 
+ .bounce { 
     -webkit-animation-name: bounce; 
     animation-name: bounce; 
-}
+ }
+
+ /**/
 
 body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -69,6 +52,7 @@ label {
     font-weight: bold;
 }
 
+/* Nav Bar */
 nav ul {
     float: right;
     margin-right: 20px;
@@ -149,9 +133,6 @@ a.active,a:hover{
     #check:checked ~ ul{
         left: 0;
     }
-    footer {
-        display: none;
-    }
 }
 
 /* Add an animation on hover */
@@ -176,32 +157,18 @@ main{
     text-align: center;
 }
 
-/* ABOUT ME */
+div {
+    text-align: center;
+    left: auto;
+    right: auto;
+    padding-top: 30px;
+}
+
 h1, h2{
     text-align: center;
     padding-top: 20px;
 }
 
-div {
-    text-align: left;
-    padding-left: 30%;
-    left: auto;
-    right: auto;
-    padding-top: 2px;
-}
 
-div.body-list{
-    padding-top: 5px;
-}
 
-p{
-    padding-top: 10px;
-}
 
-footer {
-    position: absolute;
-    left: 50%;
-    bottom: 10px;
-    transform: translate(-50%, 0%);
-    -ms-transform: translate(-50%, 0%);
-}
