--- a/aboutMe.css
+++ b/aboutMe.css
@@ -10,9 +10,9 @@
 .animate-left {
     position: relative;
     -webkit-animation-name: animateleft;
-    -webkit-animation-duration: 1s;
+    -webkit-animation-duration: .7s;
     animation-name: animateleft;
-    animation-duration: 1s;
+    animation-duration: .7s;
     z-index: -5;
 }
   
@@ -204,4 +204,26 @@ footer {
     bottom: 10px;
     transform: translate(-50%, 0%);
     -ms-transform: translate(-50%, 0%);
+}
+
+/*SCROLLBAR*/
+/* width */
+::-webkit-scrollbar {
+    width: 7px;
+  }
+  
+/* Track */
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: hsl(0, 0%, 25%);
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: hsl(0, 0%, 43%);
 }
