--- a/projects.css
+++ b/projects.css
@@ -156,36 +156,46 @@ main{
     text-align: center;
 }
 
-img {
-    border-radius: 5px;
-    height: 350px;
+li{
+    padding-bottom: 2%;
 }
 
-div {
-    left: auto;
-    right: auto;
+div{
+    width: 97%;
 }
 
-.left-list{
-    text-align: left;
-    font-size: 140%;
-    padding-bottom: 1%;
-    padding-left: 2%;
-    border-bottom-width: 1px solid hsl(0, 0%, 25%); /* Add a border style */
+div.container{
+    padding-bottom: 20px;
+    border-color: hsl(0, 0%, 25%);
+    border-bottom: 1px solid hsl(0, 0%, 25%); /* Add a border style */
 }
 
-div.info-left {
+div.left-sub-container {
     padding-top: 30px;
     padding-left: 5%;
-    padding-bottom: 20px; 
     display: flex;
-    flex-wrap: wrap; /* Add this property to allow text to wrap to the next line */
-    border-bottom: 1px solid hsl(0, 0%, 25%); /* Add a border style */
+}
+
+img, a{
+    border-radius: 5px;
+    height: 320px;
+}
+
+div.left-list{
+    text-align: left;
+    font-size: 150%;
+    padding-left: 2%;
+}
+
+p.p-left{
+    padding-top: .5%;
+    padding-left: 5%;
 }
 
 h1, h2{
     text-align: center;
-    padding-top: 20px;
+    padding-top: 10px;
+    padding-bottom: 5px;
 }
 
 /*SCROLLBAR*/
