--- a/css/contact.css
+++ b/css/contact.css
@@ -107,6 +107,10 @@ p.p-forms{
     padding-bottom: 1%;
 }
 
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: antiquewhite;
+  }
+
 textarea {
     text-align: center;
     padding: 10px;
@@ -115,8 +119,9 @@ textarea {
     margin-top: 10px;
     margin-bottom: 10px;
     height: 7%;
-    color: #010409;
+    color: antiquewhite;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background: hsl(0, 0%, 25%);;
 }
 
 .button-container {
