--- a/css/contact.css
+++ b/css/contact.css
@@ -115,8 +115,12 @@ textarea {
     margin-top: 10px;
     margin-bottom: 10px;
     height: 7%;
-    color: #010409;
+    color: antiquewhite;
+    background: hsl(0, 0%, 25%);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+::placeholder{
+    color: antiquewhite;
 }
 
 .button-container {
