--- a/css/contact.css
+++ b/css/contact.css
@@ -4,6 +4,12 @@ p {
     padding-bottom: 10%;
     padding-top: 7%;
 }
+:root{
+    --text-color: antiquewhite;
+    --bg-color: #161b22;
+    --off-color: #010409;
+    --hl-color: hsl(0, 0%, 25%);
+}
 
 div.container {
     padding-top: 5%;
@@ -153,6 +159,27 @@ textarea.contactMessage{
     color: #ff8181;
     text-align: center;
 }
+
+.email-confirm {
+    position: fixed;
+    bottom: -100%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 10000;
+    width: 15%;
+    height:18%;
+    border: 4px solid hsl(0, 0%, 25%);
+    border-radius: 3px;
+    background: var(--off-color);
+    color: var(--text-color);
+    transition: bottom 0.4s ease; /* Add a transition with ease timing function */
+}
+
+.email-sent {
+    text-align: center;
+    border-radius: 3px;
+}
+
 
 @media (max-width: 50%) {
     div.container {
