--- a/css/global.css
+++ b/css/global.css
@@ -96,6 +96,52 @@ a.active,a:hover{
     display: none;
 }
 
+.class-dropdown {
+    position: absolute;
+    right: -100%;
+    width: 250px;
+    height: 33vh;
+    background: var(--hl-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    border-radius: 5px;
+    transition: all .50s ease;
+}
+
+.class-dropdown.open {
+    right: 0;
+}
+
+/* Adjust the margin for the first item to control the spacing */
+.dropdown-item:first-child a {
+    margin-top: 0; /* You can set this value as needed */
+}
+
+.dropdown-item a {
+    text-transform: uppercase;
+    display: block;
+    margin: 0;
+    padding: 0px 25px;
+    transition: all .50s ease;
+    color: var(--text-color);
+    padding: 0;
+}
+
+.dropdown-item a:hover {
+    color: var(--text-color);
+    transform: translateY(3px);
+    background: transparent;
+}
+
+.class-links-btn {
+    cursor: pointer;
+}
+
+
+/* Rest of your CSS styles for the dropdown */
+
+
 @media (max-width: 952px){
     label.name{
         font-size: 30px;
@@ -115,6 +161,10 @@ a.active,a:hover{
         position: absolute;
         right: 0px;
         cursor: pointer;
+    }
+
+    .class-links-btn{
+        display: none;
     }
     
     ul{
@@ -194,5 +244,3 @@ nav ul li a:hover::before {
   ::-webkit-scrollbar-thumb:hover {
     background: hsl(0, 0%, 43%);
   }
-
-
