--- a/css/index.css
+++ b/css/index.css
@@ -4,41 +4,25 @@ img {
     box-shadow: 0 0 40px rgba(255, 255, 255, 0.163); /* Adjust the color and size as needed */
 }
 
-div {
+div.image{
     text-align: center;
     left: auto;
     right: auto;
     padding-top: 30px;
 }
 
-p{
+.container p{
+    padding-top: 1%;
     text-align: center;
 }
 h1, h2{
     text-align: center;
     padding-top: 20px;
 }
-
-a.hyperlink{
-    font-size: 1.5rem;
-    color:antiquewhite;
-    text-align: center;
-    display: block;
-}
-
-a.hyperlink:hover, a.hyperlink:active{
-    background: none;
-    color:#0082e6;
-    transition: 0s;
-}
-
 footer {
-    position: fixed;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background: #010409;
+    position: absolute;
     bottom: 0;
-    width: 100%;
-    height: 55px;
+    left: 0;
+    right: 0;
+    text-align: center; /* Center text horizontally */
 }
