--- a/css/global.css
+++ b/css/global.css
@@ -40,6 +40,7 @@
 
 body {
     overflow-x: hidden;
+    overflow-y: scroll;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background: var(--bg-color);
     color:antiquewhite;
@@ -101,7 +102,7 @@ a.active,a:hover{
     position: absolute;
     right: -100%;
     width: 250px;
-    height: 20vh;
+    height: 25vh;
     background: var(--hl-color);
     display: flex;
     flex-direction: column;
