--- a/css/index.css
+++ b/css/index.css
@@ -1,23 +1,56 @@
-
-img {
-    border-radius: 10px;
-    height: 400px;
-    box-shadow: 0 0 40px rgba(255, 255, 255, 0.163); /* Adjust the color and size as needed */
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 75vh;
+    user-select: none;
 }
-
-div.image{
-    text-align: center;
-    left: auto;
-    right: auto;
-    padding-top: 30px;
-}
-
-.container p{
+.info{
     padding-top: 1%;
     text-align: center;
 }
-h1, h2{
-    text-align: center;
-    padding-top: 20px;
+.info p{
+    font-size: 20px;
+    line-height: 50px;
 }
-
+.home-img{
+    display: flex;
+    width: 350px;
+    height: 350px;
+}
+.home-img .glowing-circle{
+    width: 100%;
+    height: 100%;
+    background-color: antiquewhite;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.home-img .glowing-circle::after{
+    content: '';
+    background: var(--bg-color);
+    border-radius: 50%;
+}
+.glowing-circle .image{
+    width: 340px;
+    height: 340px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+.image img {
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+footer {
+    position: absolute;
+    z-index: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center; /* Center text horizontally */
+}
